# agentic-chess-coach

./: .env.example  .gitignore  .pre-commit-config.yaml  EPIC1_COMPLETION.md  Makefile  QUICKSTART.md  README.md  pyproject.toml  setup.sh
.github/workflows/: ci.yml
src/: __init__.py
src/agents/: __init__.py
src/api/: __init__.py  main.py
src/chess/: __init__.py
src/classification/: move_quality.py
src/core/: __init__.py  config.py  logging.py
src/pipelines/: post_move.py
tests/: __init__.py  conftest.py  test_api.py  test_config.py  test_move_quality.py  test_post_move.py
